# urlscraper

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml  urlscraper.py  urlscraper.yaml
locale/el/: messages.po
locale/en/: messages.po
locale/templates/: messages.pot
tests/: test_fetch.py  test_migrate_params.py
